--- a/3f.html
+++ b/3f.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iTL Floor Guide</title>
-    <link rel="stylesheet" href="floor.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="eachfloor.css" />
     <link rel="icon" href="images/floor.png" />
   </head>
   <body>
     <div class="floor">
-      <div class="title">
-        <p>3F</p>
-      </div>
-      <img src="images/3f.png" alt="3F" />
-      <a href="floor.html" class="back">フロア選択に戻る</a>
+      <p class="title">3F</p>
     </div>
+    <img src="images/3f.png" alt="3F" />
+    <a href="floor.html" class="back">フロア選択に戻る</a>
   </body>
 </html>
