--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iTL Floor Guide</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="floor.css" />
     <link rel="icon" href="images/floor.png" />
   </head>
   <body>
     <div class="wrapper">
-      <h1>フロア選択</h1>
-
-      <div class="select-area">
-
+      <h1>iTL Floor Guide</h1>
+      <div class="to-floor">
+        <a href="map.html" class="first-choice">iTL アクセスマップ</a>
+        <a href="floor.html" class="first-choice">フロア選択</a>
+        <a href="movie.html" class="first-choice">iTL キャンパスツアー</a>
         </div>
       </div>
     </div>
