--- a/floor.html
+++ b/floor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iTL Floor Guide</title>
-    <link rel="stylesheet" href="floor.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="images/floor.png" />
   </head>
   <body>
