--- a/floor.html
+++ b/floor.html
@@ -12,7 +12,7 @@
       <h1>フロア選択</h1>
 
       <div class="select-area">
-        <div class="floorchange">
+        <div class="floor-change">
           <a href="3f.html" class="floorbox">3F</a>
           <a href="4f.html" class="floorbox">4F</a>
           <a href="5f.html" class="floorbox">5F</a>
@@ -21,7 +21,7 @@
           <a href="9f.html" class="floorbox">9F</a>
           <a href="10f.html" class="floorbox">10F</a>
           <a href="11f.html" class="floorbox">11F</a>
-          <a href="11f.html" class="none"></a>
+          <a href="index.html" class="return-top">Topへ戻る</a>
         </div>
       </div>
     </div>
