--- a/movie.html
+++ b/movie.html
@@ -9,17 +9,22 @@
   </head>
   <body>
     <div class="wrapper">
-      <h2>iTL キャンパスツアー動画</h2>
-      <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/SDW1bZm1SY8"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write;
-        encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen
-      ></iframe>
+      <h1 class="movie-title">iTL キャンパスツアー</h1>
+      <div class="youtube">
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/SDW1bZm1SY8"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write;
+          encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="return-top-embed">
+        <a href="index.html" class="return-top-embed-button">Topへ戻る</a>
+      </div>
     </div>
   </body>
 </html>
