--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
     <div class="wrapper">
       <h1>iTL Floor Guide</h1>
+      <div class="keyvisual">
+        <img src="images/キャンパス概観.jpg" width="500px" id="slideshow">
+      </div>
       <div class="to-floor">
         <a href="floor.html" class="first-choice">フロア選択</a>
         <a href="map.html" class="first-choice">iTL アクセスマップ</a>
