--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   <body>
     <div class="wrapper">
       <h1>iTL Floor Guide</h1>
+
       <div class="keyvisual">
-        <img src="images/キャンパス概観.jpg" width="500px" id="slideshow">
+        <img src="images/キャンパス概観.jpg" alt="iTL_slideshow" width="500px" id="slideshow">
       </div>
+
       <div class="to-floor">
         <a href="floor.html" class="first-choice">フロア選択</a>
         <a href="map.html" class="first-choice">iTL アクセスマップ</a>
@@ -20,5 +22,6 @@
         </div>
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
